--- a/eth-netstats/Dockerfile
+++ b/eth-netstats/Dockerfile
@@ -1,15 +1,24 @@
-FROM node:8-alpine
+FROM node:8-alpine as builder
 
-RUN apk add --update git
-
-RUN git clone https://github.com/cubedro/eth-netstats
+RUN apk add --nocache git && \
+    git clone https://github.com/cubedro/eth-netstats /eth-netstats
 
 WORKDIR /eth-netstats
 
-RUN npm install
-RUN npm install -g grunt-cli
-RUN grunt
+RUN npm install && \
+    npm install -g grunt-cli && \
+    grunt
+
+FROM node:8-alpine
+
+COPY --from=builder /eth-netstats /app
+
+WORKDIR /app
 
 EXPOSE 3000
+
+LABEL traefik.enable=true
+LABEL traefik.port=3000
+LABEL traefik.frontend.priority=100
 
 CMD ["npm", "start"]
