--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
         aliases:
           - bootstrap
     entrypoint: /root/start.sh
-    command: '--datadir=~/.ethereum/devchain --nodekeyhex=${ETH_NODEKEYHEX} --rpcapi "db,personal,eth,net,web3" --rpccorsdomain="${ETH_RPC_CORS}" --networkid=456719 --rpc --rpcaddr="0.0.0.0"'
+    command: '--datadir=~/.ethereum/devchain --nodekeyhex=${ETH_NODEKEYHEX} --rpcapi "db,personal,eth,net,web3" --rpccorsdomain="${ETH_RPC_CORS}" --networkid=${ETH_NET_ID} --rpc --rpcaddr="0.0.0.0"'
     deploy:
       restart_policy: on-error
       replicas: 1
@@ -54,7 +54,18 @@ services:
       - ./files/genesis.json:/root/files/genesis.json:ro
       - ./files/keystore:/root/.ethereum/devchain/keystore:rw
       - /etc/localtime:/etc/localtime:ro
-    command: '--datadir=~/.ethereum/devchain --rpccorsdomain="${ETH_RPC_CORS}" --networkid=456719 --rpc --bootnodes="enode://288b97262895b1c7ec61cf314c2e2004407d0a5dc77566877aad1f2a36659c8b698f4b56fd06c4a0c0bf007b4cfb3e7122d907da3b005fa90e724441902eb19e@XXX:30303"'
+    command: '--datadir=~/.ethereum/devchain --rpccorsdomain="${ETH_RPC_CORS}" --networkid=${ETH_NET_ID} --rpc --bootnodes="enode://288b97262895b1c7ec61cf314c2e2004407d0a5dc77566877aad1f2a36659c8b698f4b56fd06c4a0c0bf007b4cfb3e7122d907da3b005fa90e724441902eb19e@{{.Status.Addr}}:30303"'
+    
+  miner:
+    build: monitored-geth-client
+    links:
+      - bootstrap
+    command: "--networkid=${ETH_NET_ID} --bootnodes enode://288b97262895b1c7ec61cf314c2e2004407d0a5dc77566877aad1f2a36659c8b698f4b56fd06c4a0c0bf007b4cfb3e7122d907da3b005fa90e724441902eb19e@{{.Status.Addr}}:30303 --rpc --rpcaddr 0.0.0.0 --mine"
+    expose:
+      - "30303"
+      - "8545"
+    networks:
+      default: {}
 
   netstats:
     build: eth-netstats
